--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "10.1.0"
   },
   "devDependencies": {
-    "serverless-deployment-bucket": "^1.6.0"
+    "serverless-deployment-bucket": "^1.6.0",
+    "serverless-python-requirements": "^6.1.0"
   }
 }
