--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Serverless Framework Python3.11 Template Repository.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "serverless offline start --reloadHandler --stage local"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "serverless-deployment-bucket": "^1.6.0",
+    "serverless-offline": "^13.5.0",
     "serverless-python-requirements": "^6.1.0"
   }
 }
