--- a/env/local.yml
+++ b/env/local.yml
@@ -1,6 +1,6 @@
 # api config
 APP_API_CORS_ALLOWED_ORIGINS: "http://localhost:3000"
-APP_API_BASE_URL: "http://localhost:3333"
+API_BASE_URL: "http://localhost:3333/local"
 
 # lambda powertools configs
 POWERTOOLS_SERVICE_NAME: "ApiLocal"
