--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Serverless Framework Python3.11 Template Repository."
 authors = ["Takahashi Katsuyuki <kattakaha@gmail.com>"]
 readme = "README.md"
-
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
