fix: poetry export using poetry-plugin-export #98

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ boto3-stubs = { version = "1.35.99", extras = [
     "ses",
     "sesv2",
 ] }
+poetry-plugin-export = "^1.9.0"
 
 
 [build-system]
